Fix button size and positioning on mobile

--- a/styles.css
+++ b/styles.css
@@ -340,18 +340,24 @@ footer {
 /* Медіа-запити для мобільних пристроїв */
 @media (max-width: 768px) {
   .arrow {
-    width: 90%;
+    width: 70%;
     max-width: 250px;
+    height: 50px;
+    font-size: 16px;
+    line-height: 50px;
     bottom: 20px;
     right: 10px;
     left: auto; /* Переконайтеся, що кнопка знаходиться праворуч на мобільних */
   }
 
   .modal .arrow {
-    width: 90%;
+    width: 80%;
     max-width: 250px;
+    height: 50px;
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
+    font-size: 16px;
+    line-height: 50px;
   }
 }
